Another find and replace for lists

--- a/c/index.html
+++ b/c/index.html
@@ -204,10 +204,10 @@ And just like any principle in chemistry, there are exceptions to the Aufbau pri
 
 To summarize this section, here is the list of things to think about when drawing an orbital diagram:
 \begin{enumerate}
-    \item Count how many electrons you need, then divide by 2 to have the number of boxes you will need to have
-    \item Draw out the boxes with the correct shell subshell configuration. A simple tip to remember is 1, 3, 5, 7 for the s, p, d, and f subshell
-    \item Fill the subshell: fill the entire subshell with up-spin electrons before filling it with down-spin (or vice versa for special cases)
-    \item Stop when you already put down enough electrons, check if your element has a special case (usually question-dependent special cases)
+    <li>Count how many electrons you need, then divide by 2 to have the number of boxes you will need to have</li>
+    <li>Draw out the boxes with the correct shell subshell configuration. A simple tip to remember is 1, 3, 5, 7 for the s, p, d, and f subshell</li>
+    <li>Fill the subshell: fill the entire subshell with up-spin electrons before filling it with down-spin (or vice versa for special cases)</li>
+    <li>Stop when you already put down enough electrons, check if your element has a special case (usually question-dependent special cases)</li>
 \end{enumerate}
 
 <h3>Electron configuration</h3>
