--- a/m/calc.html
+++ b/m/calc.html
@@ -556,10 +556,10 @@ If we have $f(x)=c$, the graph of our constructed function will look like figure
 \end{figure}
 
 If we move $a$ a $dx$ amount to the right and want to find the area at that point, we plug $A(a+dx)$. If you look at the red rectangle on the figure, there are two ways to interpret that area:
-\begin{itemize}
-    \item It is the area of $A(a+dx)$ subtracted by $A(a)$
-    \item It is the area created by the increase in the variable $a$ (which is $dx$) multiplied by the height of that area $f(a)$ (in this case, we plug the number in to find the height).
-\end{itemize}
+<ul>
+    <li>It is the area of $A(a+dx)$ subtracted by $A(a)$</li>
+    <li>It is the area created by the increase in the variable $a$ (which is $dx$) multiplied by the height of that area $f(a)$ (in this case, we plug the number in to find the height).</li>
+</ul>
 And clearly, those two are mentioning the same area, so we can state that they are equal:
 \[
     A(a+dx)-A(a)
@@ -702,13 +702,13 @@ Such a way of thinking will work, but as you can see, it is not accurate when yo
 While it is true that we need to have $C$ for every integral result, it is not necessary in the case of the inner integrals $\int v\;dx$ because the $C$ will eventually cancel out.
 
 It is important to identify which $u$ and $v$ to use to make the derivatives and integrals easier — you should choose a $u$ that gets simpler when you differentiate it and is similar to $v$ integration. A rule to remember is <b>I LATE</b>. You should choose $u$ based on which of these comes first:
-\begin{itemize}
-    \item <b>I}: inverse trigonometric functions such as $sin^{-1</b>$
-    \item <b>L</b>: logarithmic functions like $\ln(x)$ or $log(x)$
-    \item <b>A</b>: algebraic functions like $x^2$ or $x+1$
-    \item <b>T</b>: trigonometric functions such as $\sin(x)$
-    \item <b>E</b>: exponential functions such as $e^x$ or $3^x$ ($x$ as the power... you don't want to give something unknown the power)
-\end{itemize}
+<ul>
+    <li><b>I}: inverse trigonometric functions such as $sin^{-1</b>$</li>
+    <li><b>L</b>: logarithmic functions like $\ln(x)$ or $log(x)$</li>
+    <li><b>A</b>: algebraic functions like $x^2$ or $x+1$</li>
+    <li><b>T</b>: trigonometric functions such as $\sin(x)$</li>
+    <li><b>E</b>: exponential functions such as $e^x$ or $3^x$ ($x$ as the power... you don't want to give something unknown the power)</li>
+</ul>
 
 <b>The formula</b> originates from algebra manipulation of the original product rule:
 \[\begin{aligned}
@@ -844,15 +844,15 @@ And if we put <b>a natural log</b> on the table after appearing in so many equat
 \end{equation}
 
 <h3>Additional material}\label{sec:m-integral-material</h3>
-\begin{itemize}
-    \item A YouTube playlist by 3Blue1Brown to help with the visualization of constructing derivatives (as well as other calculus concepts): \href{https://www.youtube.com/playlist?list=PL0-GT3co4r2wlh6UHTUeQsrf3mlS2lk6x}{Essence of calculus}
-    \item An in-depth look into the proof and connection between derivatives and integrals: \url{https://en.wikipedia.org/wiki/Fundamental_theorem_of_calculus}
-    \item The tabular method explanation video: \url{https://www.youtube.com/watch?v=Yyic5aaXGaw}
-    \item A strongly worded flowchart to solve integrals can be found in figure \ref{fig:m18}
+<ul>
+    <li>A YouTube playlist by 3Blue1Brown to help with the visualization of constructing derivatives (as well as other calculus concepts): \href{https://www.youtube.com/playlist?list=PL0-GT3co4r2wlh6UHTUeQsrf3mlS2lk6x}{Essence of calculus}</li>
+    <li>An in-depth look into the proof and connection between derivatives and integrals: \url{https://en.wikipedia.org/wiki/Fundamental_theorem_of_calculus}</li>
+    <li>The tabular method explanation video: \url{https://www.youtube.com/watch?v=Yyic5aaXGaw}</li>
+    <li>A strongly worded flowchart to solve integrals can be found in figure \ref{fig:m18}</li>
 \begin{figure}
     \centering
     \includegraphics[width=1\linewidth]{math/18.png}
     \caption{Solving integrals flowchart, courtesy of a deleted Reddit user on r/math}
     \label{fig:m18}
 \end{figure}
-\end{itemize}
+</ul>
