Push for backup

--- a/m/index.html
+++ b/m/index.html
@@ -81,7 +81,7 @@ A few logic terms:
 
 <b>Disproving conjecture</b> is a proving method that applies to theorems with $\forall xP(x)$, where you can simply find a single $x$ that dissatisfies $P(x)$.
 
-<b>Direct proof} assumes that $p$ is true, then follows implications to show that $q$ is true. This is <i>similar</i> to how you do algebra where you make multiple $=$ lines to get to your answer. To be more exact, it is algebra that gets this idea from logic. This is the application of \textbf{hypothetical syllogism</b>:
+<b>Direct proof</b> assumes that $p$ is true, then follows implications to show that $q$ is true. This is <i>similar</i> to how you do algebra where you make multiple $=$ lines to get to your answer. To be more exact, it is algebra that gets this idea from logic. This is the application of <b>hypothetical syllogism</b>:
 \begin{equation}
     [(p \rightarrow r)\land(r \rightarrow q)
     \rightarrow (p \rightarrow q)]
