--- a/p/index.html
+++ b/p/index.html
@@ -4,15 +4,15 @@ This is a chapter to distinguish the four concepts and draw a connection between
 <h3>Force</h3>
 Force can be described as a push or pull on an object, usually denoted with $\vec{F}$. Force is a vector, so it has a direction and a magnitude.
 
-<b>Net force} is the sum of all forces being exerted on one single object. If you don't see an object being moved (like when you are pushed against a heavy object), it is because your $\vec{F}_{net</b>=0$, since all forces cancel out each other.
+<b>Net force</b> is the sum of all forces being exerted on one single object. If you don't see an object being moved (like when you are pushed against a heavy object), it is because your $\vec{F}_{net}=0$, since all forces cancel out each other.
 
 Thanks to Sir Issac Newton, we have three Newton laws of motion that describe the way forces are described in physics:
 <h4>Newton's first law</h4>
-\begin{quote}
+<quote>
     An object at rest remains at rest, or if in motion, remains in motion at a constant velocity unless acted on by a net external force
-\end{quote}
+</quote>
 
-In short, if the $\vec{F}_{net} = 0$ then the object will continue to do what it is doing. This law resulted in the existence of <b>momentum}: you don't need to do anything to keep an object moving in a no-friction environment — it is the \textit{change</b> in motion that requires a force to alter the object's movement.
+In short, if the $\vec{F}_{net} = 0$ then the object will continue to do what it is doing. This law resulted in the existence of <b>momentum</b>: you don't need to do anything to keep an object moving in a no-friction environment — it is the <i>change</i> in motion that requires a force to alter the object's movement.
 
 <h4>Newton's second law</h4>
 The algebraic version of Newton's second law is:
