--- a/c/index.html
+++ b/c/index.html
@@ -167,9 +167,9 @@ An orbital diagram is used to represent how many electrons are there, and what o
 \end{figure}
 
 We group orbitals from the same subshell by connecting the sides of the orbital boxes. <b>The Hund's rule</b> dictates how we should fill the atomic orbitals from the same subshell:
-\begin{quote}
+<quote>
     Every orbital in a sublevel is singly occupied before any orbital is doubly occupied.
-\end{quote}
+</quote>
 In simple terms demonstrated by figure \ref{fig:c2}, you should fill all the orbitals in the same subshell with electrons of the same spin (<i>in most cases</i>, up spin) before putting in the opposite spin.
 \begin{figure}
     \centering
@@ -183,9 +183,9 @@ The number of orbitals per subshell is based on the third quantum number mention
 Multiply the result by 2 and you get the number of electrons a subshell can hold.
 
 Another thing you need to keep in mind is the <b>Aufbau principle</b> ("Aufbau" in Germany translates to "build up", which suits its purpose of building electron configuration from the ground state up):
-\begin{quote}
+<quote>
     When filling orbitals, the lowest energy orbitals available are always filled first.
-\end{quote}
+</quote>
 This principle is here to warn you of the fact that the subshell's energy level is not in order. Yes, the order <i>inside a shell} follows the basic order based on $l$; however, an example would be the subshell 4s has a lower energy level compared to the 3d subshell. This is a reminder that $n$ is simply to show you the \textit{relative size} of the orbit (compared to a similarly shaped orbit) while $l$ is the shape — this is why the terminology "shell" is confusing in this case, as we tend to think they are orderly stacked but in fact, they are not (figure \ref{fig:c3}). Luckily, there is a trick to remember the energy level, presented in figure \ref{fig:c4</i>; the Aufbau principle starts to kick as we reach scandium, the first transition metal in the periodic table.
 \begin{figure}
     \centering
