--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     The Note of Science Topics by Luke NK is free and unlicensed. The author simply suggests the astute reader share this with anybody who needs a different perspective to look at the topics. Knowledge is best used when everybody knows it.
     <br>
     <h1>Math</h1>
-    <div subject="m"></div>
+    <!-- <div subject="m"></div> -->
 
     <h1>Chemistry</h1>
     <div subject="c"></div>
 
     <h1>Physics</h1>
-    <div subject="p"></div>
+    <!-- <div subject="p"></div> -->
 
     <h1>Problems</h1>
     Inspired by xkcd's What If, this part is here to show how very real math can solve real or unreal problems — it is here for your entertainment. The author understands that it will make the file a bit heavier with a mostly unused part, but it was here for a reason. Luke had a problem and because he was too lazy to create a different file, Luke decided to write the problem in this file with LaTeX. Then once again because Luke was too lazy, Luke decided that he would make it as a part and write a whole paragraph to justify instead of making a new file and deleting the notes. That is productivity at its peak.
@@ -41,12 +41,24 @@ window.MathJax = {
     }
 };
 
-document.querySelectorAll('div[subject]').forEach(async (subject) => {
+let subjects = document.querySelectorAll('div[subject]'), subjectLoaded = 0;
+
+subjects.forEach(async (subject) => {
     let response = await fetch(`./${subject.getAttribute('subject')}/index.html`);
     response = await response.text();
     response = response.replaceAll('\n\n', '<br>');
     subject.outerHTML = response;
-});
+    subjectLoad();
+})
+
+function subjectLoad() {
+    subjectLoaded++
+    if (subjectLoaded < subjects.length) return;
+
+    document.querySelectorAll('a').forEach(a => {
+        a.innerText = a.href.slice(1);
+    })
+}
 
 </script>
 <script type="text/javascript" id="MathJax-script" async
